# protodummy-py

./: LICENSE  README.md  pyproject.toml
.github/workflows/: trufflehog.yml
protodummy/: __init__.py  config.py  generator.py  types.py
tests/: test_generator.py  test_proto.proto  test_proto_pb2.py
