[project]
name = "protodummy"
version = "0.1.0"
description = "Cutting-edge Python library for generating random data for Protobuf messages"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "faker>=24.0.0",
    "protobuf>=5.26.1",
]

[dependency-groups]
dev = [
    "grpcio-tools>=1.62.1",
    "pytest>=8.1.1",
    "pytest-cov>=5.0.0",
    "ruff>=0.3.0",
    "ty>=0.0.1",
]
