[project]
name = "protodummy"
version = "0.1.1"
description = "Cutting-edge Python library for generating random data for Protobuf messages"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "faker>=24.0.0",
    "protobuf>=5.26.1",
]

[dependency-groups]
dev = [
    "grpcio-tools>=1.62.1",
    "pytest>=8.1.1",
    "pytest-cov>=5.0.0",
    "ruff>=0.3.0",
    "ty>=0.0.1",
]
